Added node modules in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ node_modules/
 
 # Ignore the cache files created by development tools
 **/node_modules/.cache/
+# Ignore node_modules and cache files
+node_modules/
+frontend/node_modules/
